--- a/Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     var pageTitle = ViewData["Title"] + " - " + settings.Title;
     var pageDescription = ViewData["Description"] ?? settings.Description;
     var pageImage = ViewData["Image"] ?? settings.Logo;
- 
+
     var version = Assembly.GetEntryAssembly().GetName().Version;
 }
 
@@ -38,8 +38,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/dist/admin.min.css?version=@version">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -206,8 +207,8 @@
         <!-- /.control-sidebar -->
     </div>
     <!-- ./wrapper -->
-    
-    
+
+
     <script type="text/javascript" src="/dist/admin.min.js"></script>
     <script>
         $.widget.bridge('uibutton', $.ui.button)
