--- a/Web/Views/Posts/Detail.cshtml
+++ b/Web/Views/Posts/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@using App.ViewModels.Posts;
+@using App.ViewModels.Posts;
 
 @model PostDetailDto
 
@@ -43,7 +43,7 @@
 
     <hr class="py-3" />
 
-    <h3 class="block-title text-center pt-4 mt-2">پست‌های مرتبط</h3>
+    <h3 class="block-title text-center pt-4 mt-2">دسته‌بندی‌های مرتبط</h3>
     <div class="row">
         @foreach (var category in Model.Categories)
         {
