--- a/Web/wwwroot/css/theme-custom.css
+++ b/Web/wwwroot/css/theme-custom.css
@@ -9,3 +9,67 @@
   .blog-card .card-body {
     height: 175px;
   }
+
+  .blog-card .post-thumb {
+    display: block;
+    position: relative;
+    height: 300px;
+  }
+
+    .blog-card .post-thumb > img {
+      display: block;
+      width: 100%;
+      object-fit: cover;
+      height: 300px;
+    }
+
+li.paginate_button {
+  margin: 0;
+}
+
+  li.paginate_button a {
+    text-decoration: none
+  }
+
+ul.kalbood li {
+  list-style: none;
+}
+
+  ul.kalbood li span.li-title {
+    display: inline-block;
+    line-height: 50px;
+    width: 5rem;
+    font-weight: bold;
+  }
+
+  ul.kalbood li span.li-description:before {
+    display: inline-block;
+    content: "";
+    border-top: 2px solid black;
+    width: 4rem;
+    margin: 0 1rem;
+  }
+
+article.faq {
+  text-align: justify;
+  border: 1px solid #e7e7e7;
+  padding: 3px 5px;
+}
+
+  article.faq .question {
+    font-weight: 600;
+    margin: 0;
+  }
+
+  article.faq .answer {
+    padding-right: 15px;
+    margin: 0;
+  }
+
+article .article-image {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  max-height: 500px;
+}
