--- a/Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,9 +1,9 @@
-﻿@page
+@page
 
 @model LoginModel
 
 @{
-    ViewData["Title"] = "ورود / ثبت نام";
+    ViewData["Title"] = "ورود";
 }
 
 <div class="page-title d-flex" aria-label="Page title" style="background-image: url(img/page-title/shop-pattern.jpg);">
@@ -30,8 +30,8 @@
                 <div class="wizard-body pt-2">
                     <div class="input-group form-group">
                         <div class="input-group-prepend"><span class="input-group-text"><i class="fe-icon-mail"></i></span></div>
-                        <input asp-for="Input.Email" class="form-control text-left placeholder-right" autocomplete="username" aria-required="true" placeholder="@Html.DisplayNameFor(p=>p.Input.Email)" />
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        <input asp-for="Input.Username" class="form-control text-left placeholder-right" autocomplete="username" aria-required="true" placeholder="@Html.DisplayNameFor(p=>p.Input.Username)" />
+                        <span asp-validation-for="Input.Username" class="text-danger"></span>
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-prepend"><span class="input-group-text"><i class="fe-icon-lock"></i></span></div>
