--- a/Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,64 +1,54 @@
-﻿@page
+@page
+
 @model RegisterModel
+
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "ثبت نام";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
+<div class="page-title d-flex" aria-label="Page title" style="background-image: url(img/page-title/shop-pattern.jpg);">
+    <div class="container text-right align-self-center">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a href="#">صفحه اصلی</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">حساب کاربری</a>
+                </li>
+            </ol>
+        </nav>
+        <h1 class="page-title-heading">@ViewData["Title"]</h1>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
+</div>
+<!-- Page Content-->
+<div class="container mb-3">
+    <div class="row">
+        <div class="col-md-6 pb-5">
+            <form class="needs-validation wizard" id="account" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                <div class="wizard-body pt-2">
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend"><span class="input-group-text"><i class="fe-icon-mail"></i></span></div>
+                        <input asp-for="Input.Username" class="form-control text-left placeholder-right" autocomplete="username" aria-required="true" placeholder="@Html.DisplayNameFor(p=>p.Input.Username)" />
+                        <span asp-validation-for="Input.Username" class="text-danger"></span>
                     </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend"><span class="input-group-text"><i class="fe-icon-lock"></i></span></div>
+                        <input asp-for="Input.Password" class="form-control" aria-required="true" placeholder="@Html.DisplayNameFor(p=>p.Input.Password)" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend"><span class="input-group-text"><i class="fe-icon-lock"></i></span></div>
+                        <input asp-for="Input.ConfirmPassword" class="form-control" aria-required="true" placeholder="@Html.DisplayNameFor(p=>p.Input.ConfirmPassword)" />
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="wizard-footer text-right">
+                    <button class="btn btn-primary" type="submit">ثبت نام</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
