--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using System.Reflection;
+@using System.Reflection;
 
 @inject IWebHostEnvironment webHostEnvironment;
 
@@ -95,6 +95,7 @@
                         <a class="social-btn sb-style-6 sb-telegram sb-light-skin" target="_blank" href="@settings.Telegram" aria-label="تلگرام"><i class="socicon-telegram"></i></a>
                         <a class="social-btn sb-style-6 sb-whatsapp sb-light-skin" target="_blank" href="@settings.Whatsapp" aria-label="واتساپ"><i class="socicon-whatsapp"></i></a>
                         <a class="social-btn sb-style-6 sb-instagram sb-light-skin" target="_blank" href="@settings.Instagram" aria-label="اینستاگرام"><i class="socicon-instagram"></i></a>
+                        <a class="social-btn sb-style-6 sb-phone sb-light-skin" target="_blank" href="@settings.PhoneLink" aria-label="تلفن تماس"><i class="socicon-viber"></i></a>
                     </div>
                     <div class="col-lg-9">
                         <div class="row justify-content-center align-items-center">
