--- a/Web/wwwroot/css/theme-custom.css
+++ b/Web/wwwroot/css/theme-custom.css
@@ -7,7 +7,7 @@
 }
 
   .blog-card .card-body {
-    height: 175px;
+    height: 185px;
   }
 
   .blog-card .post-thumb {
@@ -72,4 +72,9 @@ article .article-image {
   margin-right: auto;
   margin-bottom: 15px;
   max-height: 500px;
+}
+
+.ltr-data {
+  direction: ltr !important;
+  unicode-bidi: embed;
 }
