Use of a much simpler setting class

--- a/Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,9 +1,9 @@
-﻿@using Data
+@using Data
 @using Web
 @using App.ViewModels.Common
 @using App.ViewModels.Settings
 @using Microsoft.AspNetCore.Identity
 
-@inject IApplicationSettings settings
+@inject ApplicationSettings settings
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
