Minor improvement on all projects

--- a/Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -51,5 +51,5 @@
 </div>
 
 @section Scripts {
-    <script type="text/javascript" src="/dist/jquery.validate.js"></script>
+    <partial name="_ValidationScriptsPartial" />
 }
