--- a/Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,11 +1,9 @@
-﻿@using System.Reflection;
+@using System.Reflection;
 
 @{
     var pageTitle = ViewData["Title"] + " - " + settings.Title;
     var pageDescription = ViewData["Description"] ?? settings.Description;
     var pageImage = ViewData["Image"] ?? settings.Logo;
-
-    var version = Assembly.GetEntryAssembly().GetName().Version;
 }
 
 <!DOCTYPE html>
@@ -41,7 +39,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/dist/admin.min.css?version=@version">
+    <link rel="stylesheet" href="~/dist/site.min.css" asp-append-version="true" />
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
@@ -196,7 +194,7 @@
             <strong>Copyright &copy; 2022-@DateTime.Now.Year <a href="@settings.Url">@settings.Name</a>.</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 3.1.0
+                <b>Version</b> @(Assembly.GetEntryAssembly().GetName().Version)
             </div>
         </footer>
 
@@ -209,7 +207,7 @@
     <!-- ./wrapper -->
 
 
-    <script type="text/javascript" src="/dist/admin.min.js"></script>
+    <script type="text/javascript" src="~/dist/admin.min.js" asp-append-version="true"></script>
     <script>
         $.widget.bridge('uibutton', $.ui.button)
     </script>
