--- a/Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -53,5 +53,5 @@
 </div>
 
 @section Scripts {
-    <script type="text/javascript" src="/dist/jquery.validate.js"></script>
+    <partial name="_ValidationScriptsPartial" />
 }
