--- a/Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Identity
 @using Web.Areas.Identity
 @using Web.Areas.Identity.Pages
+@using Web.Areas.Identity.Pages.Account
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
